--- a/Jollibee history.htm
+++ b/Jollibee history.htm
@@ -16,7 +16,7 @@
     <h1 class="res" style="color: red; font-size: 75px;"><strong><em>Welcome to our history</em> </strong> </h1>
 
         
-            <a class="rep" href="Jollibee menu.htm">
+            <a class="rep" href="index.htm">
             <button>Menu</button></button></a>
     
             <a class="rep" href="Jollibee History.htm">
