--- a/Jollibee history.htm
+++ b/Jollibee history.htm
@@ -19,7 +19,7 @@
             <a class="rep" href="index.htm">
             <button>Menu</button></button></a>
     
-            <a class="rep" href="Jollibee History.htm">
+            <a class="rep" href="Jollibee history.htm">
             <button>history</button></a>
     
             <a class="rep" href="Jollibee about us.htm">
