--- a/Beverages.htm
+++ b/Beverages.htm
@@ -59,10 +59,10 @@
 
        <h1 class="ret" style="color: red; font-size: 75px;"><strong><em>Welcome to Jollibee</em> </strong> </h1>
 
-            <a href="Jollibee menu.htm">
+            <a href="index.htm">
             <button>Menu</button></button></a>
     
-            <a href="Jollibee History.htm">
+            <a href="Jollibee history.htm">
             <button>history</button></a>
     
             <a href="Jollibee about us.htm">
