--- a/Beverages.htm
+++ b/Beverages.htm
@@ -59,7 +59,7 @@
 
        <h1 class="ret" style="color: red; font-size: 75px;"><strong><em>Welcome to Jollibee</em> </strong> </h1>
 
-            <a href="index.htm">
+            <a href="index.html">
             <button>Menu</button></button></a>
     
             <a href="Jollibee history.htm">
